--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,21 @@
  *= require_self
  *= require_tree .
  */
+
+html {
+  margin: 0;
+  padding: 0;
+}
+body {
+  background-color: indigo;
+  margin: 0;
+  padding: 0;
+}
+
+div#content {
+  background-color: white;
+  width: 70em;
+  margin: 0 auto;
+  padding: 2em 3em;
+  border-radius: 0 0 3px 3px;
+}
